multi-cluster-scale/manifests/policy/ha-policy/validatingadmissionpolicy-ha-policy.fairwinds.com.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: "ha-policy.fairwinds.com"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
      scope: '*'
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
  validations:
    - expression: "object.spec.replicas >= 3"
